# gnome-wardrive

./: .gitignore  BUILD_MULTI_ARCH.md  CONTRIBUTING.md  LICENSE  MOBILE_COMPLIANCE.md  MOBILE_LINUX.md  MOBILE_TESTING.md  MULTI_ARCH.md  PRIVACY.md  README.md  SECURITY.md  build-deb.sh  com.andrewstclair.Wardrive.yml  install-deps.sh  meson.build  quick-test.sh  requirements.txt  run-dev.py  setup-dev.sh  setup-permissions.sh  test-wifi-scanning.py  test_setup.py
.github/: .copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
data/: com.andrew-stclair.Wardrive.gschema.xml  com.andrewstclair.Wardrive.desktop.in  com.andrewstclair.Wardrive.gschema.xml  com.andrewstclair.Wardrive.metainfo.xml.in  gnome-wardrive.gresource.xml  meson.build  style.css
data/ui/: window.ui  window_mobile.ui  window_simple.ui
debian/: changelog  control  copyright  gnome-wardrive.gsettings-override  gnome-wardrive.install  gnome-wardrive.postinst  gnome-wardrive.postrm  rules
po/: LINGUAS  meson.build
src/: __init__.py  application.py  data_manager.py  gnome-wardrive.in  location_service.py  main.py  meson.build  wifi_scanner.py  window.py
